--- a/src/components/StyledButton.css
+++ b/src/components/StyledButton.css
@@ -33,9 +33,9 @@
     transition: 150ms all ease-in-out;
   }
   
-  .button-with-icon .icon {
+  .button-with-icon .icon1 {
     margin-right: 8px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     width: 24px;
     height: 24px;
     transition: all 0.5s ease-in-out;
@@ -56,7 +56,7 @@
   .button-with-icon:hover .text {
     transform: translateX(80px);
   }
-  .button-with-icon:hover .icon {
+  .button-with-icon:hover .icon1 {
     transform: translate(23px);
   }
   
